syntax = "proto3";

option go_package = "github.com/dvlpr-shivendra/blog-services/common/proto";

package proto;

message Post {
  int64 Id = 1;
  string Title = 2;
  string Body = 3;
  int64 AuthorId = 4;
  bool Published = 5;
  string CreatedAt = 6;
  string UpdatedAt = 7;
}

service PostService {
  rpc CreatePost(CreatePostRequest) returns (Post);
  rpc GetPost(GetPostRequest) returns (Post);
  rpc UpdatePost(Post) returns (Post);
}

message CreatePostRequest {
  string Title = 1;
  string Body = 2;
}

message GetPostRequest {
  int64 PostId = 1;
}

message Item {
  string ID = 1;
  string Name = 2;
  int32 Quantity = 3;
  string PriceID = 4;
}

message ItemsWithQuantity {
  string ID = 1;
  int32 Quantity = 2;
}

message CreateOrderRequest {
  string customerID = 1;
  repeated ItemsWithQuantity Items = 2;
}

service StockService {
  rpc CheckIfItemIsInStock(CheckIfItemIsInStockRequest) returns (CheckIfItemIsInStockResponse);
  rpc GetItems(GetItemsRequest) returns (GetItemsResponse);
}

message CheckIfItemIsInStockRequest {
  repeated ItemsWithQuantity Items = 1;
}

message CheckIfItemIsInStockResponse {
  bool InStock = 1;
  repeated Item Items = 2;
}

message GetItemsRequest {
  repeated string ItemIDs = 1;
}

message GetItemsResponse {
  repeated Item Items = 1;
}